# fun-together

./: .gitignore  Cargo.toml  Dockerfile  README.md
client/: Cargo.toml  index.html
client-example/: app.js  client.sh  debug.html  index.html  style.css
client/src/: chat_lib.rs  lib.rs
client_example/: app.js  client.js  debug.html  host.js  index.html  style.css
common/: Cargo.toml  fly.toml  render.yaml
common/src/: comm.rs  game.rs  lib.rs  main.rs  tls.rs
server/: Cargo.toml  README.md
server/client_example/: app.js  index.html  licenses.txt
server/src/: actor.rs  comm.rs  connection.rs  game.rs  main.rs  simple.rs
server/src/games/: test.rs
shuttle/: Cargo.toml
shuttle/src/: main.rs
src/: comm.rs  entry.rs  game.rs  lib.rs  main.rs
