[package]
name = "fun-together"
version = "0.1.0"
edition = "2021"



[lib]
# You should include "rlib" (the default crate type) otherwise your crate can't be used as a Rust library
# which, among other things, breaks unit testing
crate-type = ["rlib", "cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true


[dependencies]
yew = "0.19"

wasm-bindgen = "0.2.45"
wasm-logger = "0.2"

log = "0.4.6"
yew-agent = "0.1.0"
yew-router = "0.16"
reqwasm = "0.5.0"
web-sys = "0.3.55"
futures = "0.3.17"
wasm-bindgen-futures = "0.4.28"
serde_json = "1.0.73"
serde = {version = "1.0", features=["derive"]}
