[package]
name = "fun-together-server"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
tokio = { version="1", features = ["full"]}
tokio-tungstenite = {version= "0.17"}
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }

log = "0.4"
env_logger = "0.9"
once_cell = "1.16"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RwLock & reentrant mutex
parking_lot = {version = "0.12"}
